--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "notes-app-frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://magicnotes.up.railway.app",
+  "proxy": "http://localhost:4000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
